@@ -3,6 +3,7 @@ package pl.rbolanowski.tw4a.backend.taskwarrior;
 import org.junit.Test;
 
 import static org.junit.Assert.*;
+import static pl.rbolanowski.tw4a.Task.EPSILON;
 
 public class InternalTaskTest {
 
@@ -11,6 +12,7 @@ public class InternalTaskTest {
         assertNull(task.uuid);
         assertNull(task.description);
         assertNull(task.status);
+        assertEquals(0.0f, task.urgency, EPSILON);
     }
 
 }
